welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:2: error: ';' expected but ')' found.
  if (a==b) {return 0})
                      ^